tests/ui/impl-into-with-skip-setter.stderr
error: Field-level impl_into is incompatible with skip_setter. Remove one of these attributes.
 --> tests/ui/impl-into-with-skip-setter.rs:5:10
  |
5 | #[derive(TypeStateBuilder)]
  |          ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `TypeStateBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
